[package]
name = "pombase-chado-json"
version = "213.0.0"
authors = ["Kim Rutherford <kmr44@cam.ac.uk>"]
edition = "2021"
rust-version = "1.76"

[lib]
name = "pombase"
path = "src/pombase/lib.rs"

[dependencies]
serde_with = "3.12"
serde_derive = "1.0"
serde_json = "1.0"
getopts = "0.2.21"
regex = "1.11"
bit-set = "0.8"
chrono = { version = "0.4.39", default-features = false, features = ["clock", "serde"] }
flate2 = "1.0"
lazy_static = "1.5"
once_cell = "1.20"
uuid = { version = "1.10.0", features = ["v4", "serde", ] }
bytes = "1.9"
tokio = { version = "^1.43", default-features = false, features = ["rt-multi-thread"]}
async-recursion = "1.1"
deadpool-postgres = "0.14"
deadpool = "0.12"
anyhow = "1.0"
itertools = "0.14"
csv = "1.1.6"
rusqlite = { version = "0.32.1", features = ["bundled", "serde_json"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs", "normalize-path"] }
axum = { version = "0.8", features = ["macros"] }
axum-macros = "0.5"
http-body-util = "0.1.2"
percent-encoding = "2.3.1"
mime_guess = "2.0"
indexmap = "2"

[dependencies.serde]
version = "1.0"
features = ["rc", "derive"]

[dependencies.zstd]
version = "0.13"
features = ["zstdmt"]

[dependencies.flexstr]
version = "0.9.0"
features = ["serde"]

[dependencies.tokio-postgres]
version = "0.7"
features = ["with-serde_json-1", "with-uuid-1"]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json"]

[profile.dev]
opt-level = 0
debug = true
incremental = true
lto = "off"

[profile.releasedev]
inherits = "release"
opt-level = 1
debug = true
codegen-units = 256
incremental = true
lto = "off"

[profile.release]
opt-level = 3
codegen-units = 1
debug = true
lto = true
