[package]
name = "pombase-chado-json"
version = "219.44.0"
authors = ["Kim Rutherford <kmr44@cam.ac.uk>"]
edition = "2024"
rust-version = "1.88"
resolver = "3"

[lib]
name = "pombase"
path = "src/pombase/lib.rs"

[dependencies]
pombase-gocam = "0.91.0"
pombase-gocam-process = { git = "https://github.com/pombase/pombase-gocam-process.git", version = "0.105.0" }
serde_with = "3.13"
serde_derive = "1.0"
serde_json = "1.0"
getopts = "0.2.24"
regex = "1.11"
bit-set = "0.8"
chrono = { version = "0.4.41", default-features = false, features = ["clock", "serde"] }
flate2 = "1.1"
lazy_static = "1.5"
once_cell = "1.20"
uuid = { version = "1.18.0", features = ["v4", "serde", ] }
bytes = "1.9"
tokio = { version = "^1.46", default-features = false, features = ["rt-multi-thread"]}
async-recursion = "1.1"
deadpool-postgres = "0.14"
deadpool = "0.12"
anyhow = "1.0"
itertools = "0.14"
csv = "1.1.6"
rusqlite = { version = "0.37.0", features = ["bundled", "serde_json"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs", "normalize-path", "trace"] }
axum = { version = "0.8", features = ["macros"] }
axum-macros = "0.5"
axum-range = "0.5"
axum-extra = "0.10"
http-body-util = "0.1.2"
percent-encoding = "2.3.2"
mime_guess = "2.0"
indexmap = "2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.19", features=["env-filter"] }

[dependencies.serde]
version = "1.0"
features = ["rc", "derive"]

[dependencies.zstd]
version = "0.13"
features = ["zstdmt"]

[dependencies.flexstr]
version = "0.9.0"
features = ["serde"]

[dependencies.tokio-postgres]
version = "0.7"
features = ["with-serde_json-1", "with-uuid-1"]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json"]

[profile.dev]
opt-level = 0
debug = true
incremental = true
lto = "off"

[profile.releasedev]
inherits = "release"
opt-level = 1
debug = true
codegen-units = 256
incremental = true
lto = "off"

[profile.release]
opt-level = 3
codegen-units = 1
debug = true
lto = true
