[package]
name = "pombase-chado-json"
version = "223.15.0"
authors = ["Kim Rutherford <kmr44@cam.ac.uk>"]
edition = "2024"
rust-version = "1.91"
resolver = "3"

[lib]
name = "pombase"
path = "src/pombase/lib.rs"

[dependencies]
pombase-gocam = "0.106"
pombase-gocam-process = { git = "https://github.com/pombase/pombase-gocam-process.git", version = "0.125.0" }
serde_with = "3"
serde_derive = "1"
serde_json = "1"
getopts = "0.2"
regex = "1"
bit-set = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
flate2 = "1.1"
lazy_static = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4", "serde", ] }
bytes = "1"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"]}
async-recursion = "1"
deadpool-postgres = "0.14"
deadpool = "0.13"
anyhow = "1"
thiserror = "2"
itertools = "0.14"
csv = "1"
rusqlite = { version = "0.38", features = ["bundled", "serde_json"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "normalize-path", "trace"] }
axum = { version = "0.8", features = ["macros"] }
axum-macros = "0.5"
axum-range = "1.0"
axum-extra = { version = "0.12", features = ["typed-header"] }
http-body-util = "0.1"
percent-encoding = "2"
mime_guess = "2"
indexmap = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features=["env-filter"] }
rand = "0.10"
arrow = "58"
arrow-array = "58"
arrow-schema = "57"
parquet = "57"

[dependencies.serde]
version = "1"
features = ["rc", "derive"]

[dependencies.zstd]
version = "0.13"
features = ["zstdmt"]

[dependencies.flexstr]
version = "0.9"
features = ["serde"]

[dependencies.tokio-postgres]
version = "0.7"
features = ["with-serde_json-1", "with-uuid-1"]

[dependencies.reqwest]
version = "0.13"
default-features = false
features = ["json", "query"]

[profile.dev]
opt-level = 0
debug = true
incremental = true
lto = "off"

[profile.releasedev]
inherits = "release"
opt-level = 1
debug = true
codegen-units = 256
incremental = true
lto = "off"

[profile.release]
opt-level = 3
codegen-units = 1
debug = true
lto = true
